# VTKWidget

./: .gitignore  CMakeLists.txt  ControllerWidget.cpp  ControllerWidget.h  ControllerWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  NiiViewer.cpp  NiiViewer.h  NiiViewer.ui  StatusViewer.cpp  StatusViewer.h  StatusViewer.ui  main.cpp
build-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  VTKWidget.ilk  build.ninja  cmake_install.cmake
build-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: codemodel-v2-3a0e9fe3de7508aac528.json  index-2025-02-25T19-51-27-0215.json  target-VTKWidget-Debug-406f7df203c6824b3f4e.json  target-VTKWidget_autogen_timestamp_deps-Debug-c0137052541742ee69a1.json
build-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-fe7ddec69f30f57bb430.json  cmakeFiles-v1-0e2a56ea3739e97e2d80.json  codemodel-v2-d0fae482e957897e49d1.json  index-2025-02-25T19-08-22-0667.json  target-VTKWidget-Debug-b59eca64679d6cb2ba84.json  target-VTKWidget_autogen-Debug-2eda10ae78a47e7f1ff4.json
build-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.qtc_clangd/.cache/clangd/index/: MainWindow.cpp.E2B00EDF917B7163.idx  MainWindow.h.B35EC52FCF5B3CA8.idx  QApplication.3157F403A4C00644.idx  QMainWindow.77B4694603D806F5.idx  QMenuBar.8064139221B87D63.idx  QObject.B99D167A52A51871.idx  QOpenGLWidget.1B2EB881CB506D80.idx  QScopedPointer.C55FC052C0E30787.idx  QStatusBar.EDE6D7ABA22F84DF.idx  QSurfaceFormat.C5A4D669726FE54A.idx  QVTKInteractor.h.B884AF43B4ECB102.idx  QVTKOpenGLNativeWidget.h.6E6B0C1A9ABAAEB5.idx  QVTKWin32Header.h.D07A081C9D5B8740.idx  QVariant.15F7F08D2549ED84.idx  QWidget.39B432D2A45E943A.idx  WinUser.h.AEA71B84B0045BD3.idx  Windows.h.CD522AFFC30A3896.idx  __msvc_bit_utils.hpp.59F7767BF073C428.idx  __msvc_chrono.hpp.8D91EF3607BE5E89.idx  __msvc_filebuf.hpp.A0D533D810BCFF7C.idx  __msvc_heap_algorithms.hpp.521AEEFED8C85BD2.idx  __msvc_iter_core.hpp.12543139A0647581.idx  __msvc_minmax.hpp.C1033B13D511DC65.idx  __msvc_ostream.hpp.F49B3E2D4D37D7C7.idx  __msvc_sanitizer_annotate_container.hpp.50AD54F3AFE56791.idx  __msvc_string_view.hpp.F27AD6629554D123.idx  __msvc_system_error_abi.hpp.9F3085BD1CC76991.idx  __msvc_threads_core.hpp.7A99049321B77DFA.idx  __msvc_xlocinfo_types.hpp.58F99CD9791CE4DD.idx  __stdarg___gnuc_va_list.h.B911E950AF3C9665.idx  __stdarg___va_copy.h.834DB1B1BF532C66.idx  __stdarg_header_macro.h.3CD5A089365252B7.idx  __stdarg_va_arg.h.9FC5F73BD233A7D1.idx  __stdarg_va_copy.h.C36B120EAE6AB841.idx  __stdarg_va_list.h.B038E413C009B941.idx  __stddef_header_macro.h.B24701EEF2E69C64.idx  __stddef_max_align_t.h.6D0A0D6365A972F0.idx  __stddef_null.h.3F5930186320D212.idx  __stddef_nullptr_t.h.D30593984598B1F3.idx  __stddef_offsetof.h.0C450C0B97DCF08F.idx  (+433 more)
build-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/VTKWidget_autogen/: deps
build-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/VTKWidget_autogen/EWIEGA46WW/: moc_MainWindow.cpp.d
build-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/VTKWidget_autogen/include/: ui_MainWindow.h
